--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -46,7 +46,8 @@ layout: default
             <div class="media-content">
                 <p>
                     {% if example.type == "ipynb" %}
-                    <a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{example.filename | relative_url}}">download</a>)
+                    <!--<a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{example.filename | relative_url}}">download</a>)-->
+                    <a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{page.dir | append: example.filename | relative_url }}">download</a>)
                     {% else %}
                     <a href="{{page.dir | append: example.filename | relative_url }}">{{example.title}}</a>
                     {% endif %}
