--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -37,6 +37,7 @@ layout: default
             </div>
         </article>
         {% endfor %}
+	
         <h2 class="subtitle">Examples</h2>
         {% for example in page.examples %}
         <article class="media">
@@ -58,6 +59,24 @@ layout: default
             </div>
         </article>
         {%endfor%}
+
+        <h2 class="subtitle">Data</h2>
+        {% for example in page.data %}
+        <article class="media">
+            <figure class="media-left">
+                <span class="icon is-large"><i class="fas fa-3x fa-database"></i></span>
+            </figure>
+            <div class="media-content">
+                <p>
+                    <a href="{{page.dir | append: example.path | append: "data/" | append: example.filename | relative_url }}">{{example.title}}</a>
+                </p>
+                <p>
+                    {{example.description}}
+                </p>
+            </div>
+        </article>
+        {%endfor%}
+	
         <h2 class="subtitle">Assignments</h2>
         {% for assignment in assignments %}
         <article class="media">
