--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -108,7 +108,13 @@ layout: default
                     <span class="icon is-large"><i class="fas fa-2x fa-database"></i></span>
                 </p>
                 <p>
-                    <a href="{{f.dir | append: example.path | append: "data/" | append: example.filename | relative_url }}">{{example.title}}</a>
+		  {% if example.type == "data" %}
+                   <a href="{{f.dir | append: example.path | append: "data/" | append: example.filename | relative_url }}">{{example.title}}</a>
+		  {% endif %}
+		  {% if example.type == "dataOtherWeek" %}
+                   <a href="{{ "/" | append: example.week | append: "/data/" | append: example.filename | relative_url }}">{{example.title}}</a>
+		  {% endif %}
+		   
                 </p>
             </div>
         </div>
