--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -41,17 +41,14 @@ layout: default
         <h2 class="subtitle">Examples</h2>
         {% for example in page.examples %}
         <article class="media">
+	  {% unless example.filename contains "2019" %}
             <figure class="media-left">
                 <span class="icon is-large"><i class="fas fa-3x fa-chart-line"></i></span>
             </figure>
             <div class="media-content">
                 <p>
                   {% if example.type == "ipynb" %}
-		    {% if example.filename contains "2019" %}
-                      <b>Past Notebook:</b> <a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{page.dir | append: example.filename | relative_url }}">download</a>)
-		    {% else %}
-                      <a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{page.dir | append: example.filename | relative_url }}">download</a>)
-		    {% endif %}
+                     <a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{page.dir | append: example.filename | relative_url }}">download</a>)
                    {% else %}
                     <a href="{{page.dir | append: example.filename | relative_url }}">{{example.title}}</a>
                    {% endif %}
@@ -60,7 +57,13 @@ layout: default
                     {{example.description}}
                 </p>
             </div>
-        </article>
+	  {% endunless %}
+          {% if example.filename contains "2019" %}
+	    <p>
+              <b>Past Notebook:</b> <a href="../nbv.html?notebook_name={{page.dir | append: example.filename | relative_url | url_encode }}">{{example.title}}</a> - (<a href="{{page.dir | append: example.filename | relative_url }}">download</a>)
+	    </p>
+          {% endif %}
+         </article>
         {% endfor %}
 	
 	<!-- don't include libraries if not there -->
