adding in right github link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,8 @@
                     {% endfor %}
                 </div>
                 <div class="navbar-end">
-                    <a href="{{site.github.url}}" class="navbar-item">
+                    <!--<a href="{{site.github.url}}" class="navbar-item">-->
+                    <a href="https://github.com/UIUC-iSchool-DataViz/is445_spring2021" class="navbar-item">
                         <span class="icon is-large">
                             <i class="fab fa-github"></i>
                         </span>
